setting deployment config

--- a/_config.yml
+++ b/_config.yml
@@ -68,4 +68,6 @@ theme: again
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:sandokaishy/hexo-blog.git
+  branch: gh-pages
